fixed input elements so that two input elements remain in a row when the screen is greater than 605px, now working password validation, to clean up white space between form elements, and to clean up logo and logo text to adapt and look good with different screen sizes

--- a/styles.css
+++ b/styles.css
@@ -212,7 +212,7 @@ input[type=text] {
  .names-container { 
     /* display: block;  */
     display: flex;
-    flex-direction: column; 
+    flex-direction: row; 
     justify-content: center; 
     align-items: center; 
     /* line-height: -20px; */
@@ -224,7 +224,7 @@ input[type=text] {
  @media (max-width: 1163px) { 
     .password-container { 
        /* display: block;  */ 
-       flex-direction: column; 
+       flex-direction: row; 
        justify-content: center; 
        align-items: center;
        margin: auto; 
@@ -237,7 +237,7 @@ input[type=text] {
     @media (max-width: 1163px) { 
         .e-mail-phone-container { 
            /* display: block;  */
-           flex-direction: column; 
+           flex-direction: row; 
            justify-content: center; 
            align-items: center;
            margin: auto; 
@@ -256,7 +256,54 @@ input[type=text] {
             }
         } 
 
-@media (max-width: 1163px) {
+        @media (max-width: 605px) { 
+            .names-container { 
+               /* display: block;  */
+               display: flex;
+               flex-direction: column; 
+               justify-content: center; 
+               align-items: center; 
+               /* line-height: -20px; */
+               width: auto; 
+               height: auto; 
+            }
+            } 
+
+            @media (max-width: 605px) { 
+                .password-container { 
+                   /* display: block;  */ 
+                   flex-direction: column; 
+                   justify-content: center; 
+                   align-items: center;
+                   margin: auto; 
+                   line-height: 1.5em; 
+                   width: auto; 
+                   height: auto;
+                }
+                } 
+
+
+    @media (max-width: 605px) { 
+        .e-mail-phone-container { 
+           /* display: block;  */
+           flex-direction: column; 
+           justify-content: center; 
+           align-items: center;
+           margin: auto; 
+           line-height: 1.5em;
+           width: auto; 
+           height: auto;
+        }
+        } 
+
+
+
+
+
+
+
+
+    @media (max-width: 1163px) {
     #left-containers { 
         display: block; 
         position: relative; 
